--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "axios": "^1.2.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.17",
-    "element-ui": "^2.15.7",
+    "echarts": "^5.4.1",
+    "element-ui": "^2.15.12",
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
