--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.4.1",
     "element-ui": "^2.15.12",
     "js-cookie": "^3.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
